--- a/packages/llama-cpp-python/zarf.yaml
+++ b/packages/llama-cpp-python/zarf.yaml
@@ -26,7 +26,7 @@ components:
           - "llama-cpp-python-values.yaml"
     images:
       - ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python:###ZARF_PKG_TMPL_IMAGE_VERSION###
-      - alpine:3.18
+      - cgr.dev/chainguard/bash:latest
     dataInjections:
       - source: .model/
         target:
