--- a/packages/llama-cpp-python/chart/values.yaml
+++ b/packages/llama-cpp-python/chart/values.yaml
@@ -18,7 +18,7 @@ fullnameOverride: ""
 podAnnotations: {}
 
 podSecurityContext:
-  runAsNonRoot: false #TODO: @JPERRY the dataInjection init-container to run as non-root
+  runAsNonRoot: true
 
 securityContext:
   runAsUser: 65532
