--- a/packages/vllm/chart/values.yaml
+++ b/packages/vllm/chart/values.yaml
@@ -17,7 +17,10 @@ fullnameOverride: ""
 
 podAnnotations: {}
 
-runtimeClassName: nvidia
+gpu:
+  enabled: true # if set to false vllm won't work
+  runtimeClassName: nvidia
+
 podSecurityContext:
   runAsNonRoot: true
 
