--- a/packages/whisper/Dockerfile
+++ b/packages/whisper/Dockerfile
@@ -26,7 +26,7 @@ RUN pip uninstall -y ctranslate2 transformers[torch]
 RUN pip install packages/whisper/build/lfai_whisper*.whl --no-index --find-links=packages/whisper/build/
 
 # Use hardened ffmpeg image to get compiled binaries
-FROM cgr.dev/chainguard/ffmpeg:latest as ffmpeg
+FROM cgr.dev/chainguard/ffmpeg:latest AS ffmpeg
 
 # hardened and slim python image
 FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11
