--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -32,14 +32,17 @@
     "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/svelte": "^5.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/dompurify": "^3.0.5",
     "@types/eslint": "^8.56.0",
     "@types/lodash": "^4.17.4",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.7.1",
+    "autoprefixer": "^10.4.19",
     "carbon-components-svelte": "^0.85.0",
     "carbon-icons-svelte": "^12.6.0",
     "carbon-preprocess-svelte": "^0.11.3",
@@ -48,18 +51,23 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.38.0",
+    "flowbite": "^2.4.1",
+    "flowbite-svelte": "^0.46.15",
+    "flowbite-svelte-icons": "^1.6.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lodash": "^4.17.21",
     "otpauth": "^9.2.2",
     "pdf-lib": "^1.17.1",
+    "postcss": "^8.4.38",
     "pptxgenjs": "^3.12.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "sass": "^1.71.1",
     "svelte": "^4.2.15",
     "svelte-check": "^3.7.1",
-    "@testing-library/user-event": "^14.5.2",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
