--- a/packages/text-embeddings/zarf.yaml
+++ b/packages/text-embeddings/zarf.yaml
@@ -18,7 +18,7 @@ variables:
     pattern: "^[0-9]+$"
   - name: GPU_ENABLED
     description: Whether to enable GPU driver for the model inferencing.
-    default: false
+    default: "false"
     pattern: "^(true|false)$"
 
 components:
