(chore) Add UI Playwright Tests to E2E Workflow (#551)
* add playwright tests to e2e workflow
* add UI zarf deployment to e2e workflow

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write . && eslint . --fix",
     "test:integration": "playwright test",
     "test:integration:ui": "playwright test --ui",
+    "test:integration:ci": "playwright test tests/global.setup.ts tests/api.test.ts tests/api-keys.test.ts tests/header.test.ts tests/logout.test.ts",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "prepare": "husky",
