--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -61,6 +61,16 @@ jobs:
         - name: Install Python Deps
           run: python -m pip install "."
 
+        - name: Setup Node
+          uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+          with:
+            node-version-file: 'src/leapfrogai_ui/package.json'
+
+        - name: Install UI/Playwright Dependencies
+          run: |
+            npm --prefix src/leapfrogai_ui ci
+            npx --prefix src/leapfrogai_ui playwright install
+
         - name: Setup UDS Environment
           uses: defenseunicorns/uds-common/.github/actions/setup@05f42bb3117b66ebef8c72ae050b34bce19385f5
           with:
@@ -71,9 +81,9 @@ jobs:
           run: |
             uds deploy k3d-core-slim-dev:0.22.2 --confirm
 
-          ##########
-          # Supabase
-          ##########
+        ##########
+        # Supabase
+        ##########
         - name: Deploy Supabase
           run: |
             make build-supabase LOCAL_VERSION=e2e-test
@@ -93,6 +103,16 @@ jobs:
             python -m pytest ./tests/e2e/test_supabase.py -v
 
         ##########
+        # UI
+        ##########
+        - name: Deploy LFAI-UI
+          run: |
+            make build-ui LOCAL_VERSION=e2e-test
+            docker image prune -af
+            uds zarf package deploy packages/ui/zarf-package-leapfrogai-ui-amd64-e2e-test.tar.zst --confirm
+            rm packages/ui/zarf-package-leapfrogai-ui-amd64-e2e-test.tar.zst
+
+        ##########
         # API
         ##########
         - name: Deploy LFAI-API
@@ -106,6 +126,17 @@ jobs:
           run: |
             python -m pip install requests
             python -m pytest ./tests/e2e/test_api.py -v
+
+        # Run the playwright UI tests using the deployed Supabase endpoint
+        - name: UI/API/Supabase E2E Playwright Tests
+          run: |
+            cp src/leapfrogai_ui/.env.example src/leapfrogai_ui/.env
+            TEST_ENV=CI PUBLIC_DISABLE_KEYCLOAK=true PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
+
+        # The UI can be removed after the Playwright tests are finished
+        - name: Cleanup UI
+          run: |
+            uds zarf package remove leapfrogai-ui --confirm
 
         ##########
         # llama
