change to name override

--- a/packages/text-embeddings/embedding-values.yaml
+++ b/packages/text-embeddings/embedding-values.yaml
@@ -2,8 +2,7 @@ image:
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 gpu:
-  enabled: "###ZARF_VAR_GPU_ENABLED###"
-  classname: nvidia
+  className: "###ZARF_VAR_CLASS_NAME###"
 
 resources:
   limits:
