--- a/packages/whisper/whisper-values.yaml
+++ b/packages/whisper/whisper-values.yaml
@@ -2,8 +2,7 @@ image:
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 gpu:
-  className: "###ZARF_VAR_CLASS_NAME###"
-  className: nvidia
+  className: "###ZARF_VAR_GPU_CLASS_NAME###"
 
 resources:
   limits:
