--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -1,10 +1,11 @@
+# see individual zarf packaging configuration for more variables and variable descriptions
 variables:
   text-embeddings:
-    gpu_enabled: false
+    gpu_class_name: "" # Leave blank if nvidia runtimeClass is not present in cluster
     gpu_limit: 0
 
   whisper:
-    gpu_enabled: false
+    gpu_class_name: "" # Leave blank if nvidia runtimeClass is not present in cluster
     gpu_limit: 0
 
   supabase:
