--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -90,6 +90,8 @@ storage:
   extraEnvVars:
     - name: FILE_SIZE_LIMIT
       value: "###ZARF_VAR_MAX_FILE_UPLOAD_SIZE_IN_BYTES###"
+    - name: UPLOAD_FILE_SIZE_LIMIT
+      value: "###ZARF_VAR_MAX_FILE_UPLOAD_SIZE_IN_BYTES###"
 
 studio:
   enabled: ###ZARF_VAR_ENABLE_STUDIO###
