--- a/packages/k3d-gpu/Makefile
+++ b/packages/k3d-gpu/Makefile
@@ -7,8 +7,8 @@ ORGANIZATION := defenseunicorns
 PLATFORM := linux/amd64
 TAG := latest
 K3D_CLUSTER_NAME := k3d-core-slim-dev:0.24.0
-K3S_TAG := $(shell jq -r .k3s_tag ${MAKEFILE_DIR}/config.json)
-CUDA_TAG := $(shell jq -r .cuda_tag ${MAKEFILE_DIR}/config.json)
+K3S_TAG := $(shell jq -r .k3s_tag ${MAKEFILE_DIR}/version_config.json)
+CUDA_TAG := $(shell jq -r .cuda_tag ${MAKEFILE_DIR}/version_config.json)
 
 echo-config:
 	@echo "DIR: ${MAKEFILE_DIR}"
@@ -22,7 +22,7 @@ local-registry: ## Start up a local container registry. Errors in this target ar
 
 build-k3d-gpu: local-registry echo-config ## Build the k3d-gpu-support image
 # Change to the root of the repository and build the image
-	@cd ${MAKEFILE_DIR}/../.. && \ 
+	@cd ${MAKEFILE_DIR}/../.. && \
 	docker build \
 	 --platform=${PLATFORM} \
 	 --build-arg K3S_TAG=${K3S_TAG} \
