670 feat(ui): users can select an annotation to viewdownload the original file (#785)
* Adds ability to download files used in a RAG response.

* Also includes large refactor for chat completions & assistant chat data flow to support complex annotations and editing.

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -35,6 +35,7 @@
     "@sveltejs/kit": "^2.5.7",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/svelte": "^5.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/dompurify": "^3.0.5",
     "@types/eslint": "^8.56.0",
     "@types/lodash": "^4.17.4",
@@ -60,7 +61,6 @@
     "sass": "^1.71.1",
     "svelte": "^4.2.15",
     "svelte-check": "^3.7.1",
-    "@testing-library/user-event": "^14.5.2",
     "tslib": "^2.4.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
@@ -70,6 +70,7 @@
   "type": "module",
   "dependencies": {
     "@ai-sdk/openai": "^0.0.13",
+    "@ai-sdk/svelte": "^0.0.17",
     "@carbon/colors": "^11.21.0",
     "@carbon/layout": "^11.20.0",
     "@carbon/themes": "^11.32.0",
@@ -79,7 +80,7 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.39.8",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
-    "ai": "^3.1.11",
+    "ai": "^3.2.25",
     "carbon-pictograms-svelte": "^12.10.0",
     "concurrently": "^8.2.2",
     "dompurify": "^3.1.6",
